2014-05-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (process_node_text): First argument changed from
	void * to WINDOW *.  Callers updated.
	* info/display.c (display_node_text):
	* info/window.c (_calc_line_starts): Receive WINDOW * argument.
	* info/window.h (WINDOW): New field line_slots.

	* info/info.h (add_pointer_to_array): Work for integer types.
	* info/info.h (add_element_to_array): Synonym for add_pointer_to_array.

	* info/display.c (struct display_node_closure): Removed.
	* info/window.c (struct calc_closure, calc_closure_expand): Removed.

2014-05-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.h (WINDOW): line_starts changed to pointer to
	(array of) offsets.  This stops the need to write expressions like
	"win->line_starts[line] - win->node->contents" in many places.  All
	uses updated.

	* info/window.c (process_node_text): Set line_starts.

	* info/window.c (process_node_text, _calc_line_starts)
	* info/display.c (display_node_text): Consistent variable naming
	among local variable names in process_node_text and the arguments
	for the functions it calls.

2014-05-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_select_reference): Code merged from
	info_next_index_match: Call window_log_to_phys_line.
	* info/indices.c (info_next_index_match): Call info_select_reference.

	* info/Makefile.am: Remove index-long-nodeline.sh from XFAIL_TESTS.

2014-05-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_node_contents, scan_reference_label):
	[preprocess-nodes=On] Perform character encoding on reference
	label.
	(scan_reference_target): Sometimes output newline before file
	indicator.
	(avoid_see): Use length from input for comparison.

2014-05-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_reference_label) Declared static.
	(scan_reference_target): Argument added.  Declared static.
	[preprocess-nodes=On]: Add space before output "(" if not at